fixed issue with myCashForm and myCheckForm having overlap

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
     font-size: 25px;
 }
 
-.ottawaCashForm {
+.myCheckForm {
     display: flex;
     flex-direction: column;
 
